frontend_tests/negative/main_method/go.mod
module example.com/renvotests/negative/main_method

go 1.25
